hphp/test/zend/good/ext/standard/tests/general_functions/get_included_files.php.expectf
*** Testing get_included_files()

-- List included files at start --
array(1) {
  [0]=>
  string(%d) "%s/get_included_files.php"
}

-- List included files atfter including inc1 -
array(2) {
  [0]=>
  string(%d) "%s/get_included_files.php"
  [1]=>
  string(%d) "%s/get_included_files_inc1.inc"
}

-- List included files atfter including inc2 which will include inc3 which includes inc1 --
array(4) {
  [0]=>
  string(%d) "%s/get_included_files.php"
  [1]=>
  string(%d) "%s/get_included_files_inc1.inc"
  [2]=>
  string(%d) "%s/get_included_files_inc2.inc"
  [3]=>
  string(%d) "%s/get_included_files_inc3.inc"
}

-- Error cases --

Warning: get_included_files() expects exactly 0 parameters, 1 given in %s/get_included_files.php on line 21
===DONE===
